--- a/Agenda/.classpath
+++ b/Agenda/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="/2025_depurador"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
